build the structure for features

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css">
 
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body>
 
@@ -47,6 +49,79 @@
 			</div>
 			
 		</section>
+
+
+
+		<!-- FEATURES -->
+		<section id="features">
+			<div class="container">
+				<!-- Here we will do a nested grid -->
+				<div class="row center-xs center-sm center-md center-lg"> 
+					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+						<h2>Core Features</h2>
+						<p>What's Included</p>
+
+						<!-- ICON ROW 1 -->
+						<div class="row center-xs center-sm center-md center-lg"> 
+
+							<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+								<i class="fa fa-dashboard"></i> <br>
+								<h4>Fully Optimized</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, </p>
+
+							</div>
+
+							<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+								<i class="fa fa-question-circle-o"></i> <br>
+								<h4>Free Support</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, </p>
+
+							</div>
+
+							<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+								<i class="fa fa-rocket"></i> <br>
+								<h4>Free Upgrades</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, </p>
+
+							</div>
+
+						</div>
+
+						<!-- ICON ROW 2 -->
+						<div class="row center-xs center-sm center-md center-lg"> 
+
+							<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+								<i class="fa fa-line-chart"></i> <br>
+								<h4>Uptime Guarantee</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, </p>
+
+							</div>
+
+							<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+								<i class="fa fa-users"></i> <br>
+								<h4>Multi-User</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, </p>
+
+							</div>
+
+							<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+								<i class="fa fa-plug"></i> <br>
+								<h4>Plug &amp; play</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, </p>
+
+							</div>
+
+						</div>
+
+
+					</div>
+
+				</div>
+
+			</div>
+		</section>
+
+
 
 
 	</body>
