build the structure for INFO Section

--- a/index.html
+++ b/index.html
@@ -121,7 +121,29 @@
 			</div>
 		</section>
 
+		<!-- INFO -->
+		<section id="info">
+			<div class="container">
+				<div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
+					<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+						<img src="https://fm.cnbc.com/applications/cnbc.com/resources/img/editorial/2017/09/13/104707079-handout-iphone-x-2.JPG?v=1505302903" alt="Phone Image">
+					</div>
 
+					<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+						<h2>Core Features</h2>
+						<ul>
+							<li><i class="fa fa-check"></i> Fully Optimized</li>
+							<li><i class="fa fa-check"></i> Free Support</li>
+							<li><i class="fa fa-check"></i> Free Upgrades</li>
+							<li><i class="fa fa-check"></i> UpTime Guarantee</li>
+							<li><i class="fa fa-check"></i> Multiple Users</li>
+							<li><i class="fa fa-check"></i> Plug &amp; Play</li>
+						</ul>
+
+					</div>
+				</div>
+			</div>
+		</section>
 
 
 	</body>
