build the structure for COMPANY Section

--- a/index.html
+++ b/index.html
@@ -146,5 +146,39 @@
 		</section>
 
 
+		<!-- COMPANY -->
+		<section id="company">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+						<h4>Contact Us</h4>
+						<ul>
+							<li><i class="fa fa-phone"></i> (999) 444-4444</li>
+							<li><i class="fa fa-envelope"></i> support@apptheme.test</li>
+							<li><i class="fa fa-map"></i> 444 blabla Ave Las Vegas, Nevada </li>
+						</ul>
+					</div>
+
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+						<h4>About Us</h4>
+						<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					    </p>						
+					</div>
+
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+						<h4>Newsletter</h4>
+						<p> Lorem ipsum dolor sit </p>		
+						<form>
+							<input type="text" name="email" placeholder="Enter Email">
+							<button name="button" type="submit">Submit</button>
+						</form>				
+					</div>
+					
+				</div>
+			</div>
+		</section>
+
+
 	</body>
 </html>
