--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!-- HEADER -->
 		<header id="main-header">
 			<div class="container">
-				<div class="row end-sm end-md end-lg">
+				<div class="row end-sm end-md end-lg center-xs middle-xs middle-sm middle-md middle-lg">
 					<div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
 						<h1><span class="primary-text">App</span>Theme</h1>
 					</div>
@@ -24,7 +24,7 @@
 						<nav id="navbar">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<li><a href="index.html">About</a></li>
+								<li><a href="about.html">About</a></li>
 								<li><a href="services.html">Services</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
@@ -40,7 +40,7 @@
 			<div class="container"> 
 
 				<div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
-					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+					<div class="col-xs-10 col-sm-10 col-md-10 col-lg-7 showcase-content">
 						<h1>Welcome to <span class="primary-text">AppTheme</span></h1>
 						<p>A template built with HTML5, CSS3 and Flexboxgrid</p>
 					</div>
@@ -49,7 +49,6 @@
 			</div>
 			
 		</section>
-
 
 
 		<!-- FEATURES -->
@@ -120,6 +119,7 @@
 
 			</div>
 		</section>
+
 
 		<!-- INFO -->
 		<section id="info">
