--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,10 @@
 					<div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
 						<nav id="navbar">
 							<ul>
-								<li class="current"><a href="index.html">Home</a></li>
+								<li "><a href="index.html">Home</a></li>
 								<li><a href="about.html">About</a></li>
 								<li><a href="services.html">Services</a></li>
-								<li><a href="contact.html">Contact</a></li>
+								<li class="current"><a href="contact.html">Contact</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -104,7 +104,7 @@
 					    </p>						
 					</div>
 
-					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 med">
 						<h4>Social Media</h4>
 						
 						<div id="socialMedia">
@@ -135,7 +135,7 @@
                <div class="container">
                     <div class="row center-xs center-sm center-md center-lg">
                          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                              <p>Copyright &copy; 2017 | AppTheme</p>
+                              <p>Copyright &copy; 2017 | QedesinaTube</p>
                          </div>
                     </div>
                </div>
