--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 					    </p>						
 					</div>
 
-					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 med">
 						<h4>Social Media</h4>
 						
 						<div id="socialMedia">
@@ -195,7 +195,7 @@
 			<div class="container">
 				<div class="row center-xs center-sm center-md center-lg">
 					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-						<p>Copyright &copy; 2017 | AppTheme</p>
+						<p>Copyright &copy; 2017 | QedesinaTube</p>
 					</div>
 				</div>
 			</div>
